<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_firstname"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/editText_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lastname"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintStart_toEndOf="@id/editText_firstname"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editText_phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phonenumber"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintStart_toEndOf="@id/editText_lastname"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="phone"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/editText_firstname"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tw_select_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw_search_user_txt"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_submit" />

    <AutoCompleteTextView
        android:id="@+id/auto_complete_tw_firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tw_select_user"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_autoComplete_firstName"
        android:padding="15dp" />

    <AutoCompleteTextView
        android:id="@+id/auto_complete_tw_lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/auto_complete_tw_firstName"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_autoComplete_lastName"
        android:padding="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>